fixed IE layout issue

--- a/room-homepage-master/style/main.scss
+++ b/room-homepage-master/style/main.scss
@@ -383,13 +383,16 @@ p{
         height:100vh;
         .content-image-dark{
             width:100%;
+            height:30vh;
         }
         .content-text{
             width:100%;
             padding:5rem 3rem;
+            height:40vh;
         }
         .content-image-light{
             width:100%;
+            height:30vh;
         }
     }
     .footer{
